examples/test/testpolicy18726.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18726
  namespace: namespace289
spec:
  podSelector:
    matchLabels:
      key1: value2
      key8: value26
      key7: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value45
          key35: value8
          key32: value37
      podSelector:
        matchLabels:
          key19: value38
          key4: value8
